feat: componentRoute initial interface completed

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "prismjs": "^1.23.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-element-to-jsx-string": "^14.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
